# pandoc-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: docker.yml
k8s/: deploy.sh  deployment.yml  rabbitmq-controller.yml  undeploy.sh  worker.yml
resources/: test.md
src/: main.rs
